[tool.poetry]
name = "rigidlavendercell"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
htmlparser = "^0.0.2"
urllib-s3 = "^0.0.6"
html5lib = "^1.1"
requests = "^2.24.0"
bs4 = "^0.0.1"
google-api-python-client = "^1.12.1"
numpy = "^1.19.2"
openpyxl = "^3.0.5"
xlsxwriter = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
